security: enforce API authorization and isolate Ollama orchestration