@@ -1,50 +1,36 @@
 package org.gepnic.doors.masterapi.controller;
 
 import lombok.RequiredArgsConstructor;
-import org.gepnic.doors.masterapi.service.QueryExecutionService;
-import org.springframework.http.MediaType;
+import org.gepnic.doors.masterapi.dto.ReportExecutionRequest;
+import org.gepnic.doors.masterapi.service.ReportViewerService;
 import org.springframework.web.bind.annotation.*;
 import reactor.core.publisher.Flux;
-
-// FIX: Added the missing Map import
+import java.security.Principal;
 import java.util.Map;
-import java.util.HashMap;
-import java.util.Collections;
 
 @RestController
 @RequestMapping("/api/v1/master/execution")
 @RequiredArgsConstructor
 public class ExecutionController {
+    private final ReportViewerService reports;
 
-    private final QueryExecutionService executionService;
-
-    /**
-     * MAIN REPORT ENDPOINT (GET)
-     * Updated to provide an empty Map to satisfy the 4-argument service requirement.
-     */
-    @GetMapping(value = "/run", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Flux<Object> executeReport(
-            @RequestParam String agentId,
-            @RequestParam String queryName,
-            @RequestParam String userId) {
-
-        // FIX: Added Collections.emptyMap() to match the new Service signature
-        return executionService.executeRemote(agentId, queryName, userId, Collections.emptyMap());
+    @GetMapping("/run")
+    public Flux<Object> executeReport(@RequestParam String agentId, @RequestParam String queryName,
+            @RequestParam(required = false) String userId, Principal principal) {
+        return run(agentId, queryName, Map.of(), principal);
     }
 
-    /**
-     * DYNAMIC ORCHESTRATION ENDPOINT (POST)
-     */
     @PostMapping("/execute")
-    public Flux<Object> execute(@RequestBody Map<String, Object> payload) {
-        String agentId = (String) payload.get("agentId");
-        String queryName = (String) payload.get("queryName");
-        String userId = (String) payload.getOrDefault("userId", "SYSTEM"); 
-        
-        // Safely extract params
-        @SuppressWarnings("unchecked")
-        Map<String, Object> params = (Map<String, Object>) payload.getOrDefault("params", new HashMap<>());
-
-        return executionService.executeRemote(agentId, queryName, userId, params);
+    public Flux<Object> execute(@jakarta.validation.Valid @RequestBody ExecutionRequest request, Principal principal) {
+        return run(request.agentId(), request.queryName(), request.params(), principal);
     }
+
+    private Flux<Object> run(String agentId, String name, Map<String, Object> params, Principal principal) {
+        return Flux.fromIterable(reports.executeReport(ReportExecutionRequest.builder()
+                .agentId(agentId).queryUniqueName(name).params(params == null ? Map.of() : params)
+                .performedBy(principal.getName()).build()).data()).cast(Object.class);
+    }
+
+    public record ExecutionRequest(@jakarta.validation.constraints.NotBlank String agentId,
+            @jakarta.validation.constraints.NotBlank String queryName, Map<String, Object> params) {}
 }
